# PROTECT-CHILD_v6-algorithms

./: README.md
V6-epiclock-py/: .copier-answers.yml  Dockerfile  Makefile  README.md  algorithm_store.json  pyproject.toml
V6-epiclock-py/docs/: README.md  conf.py  index.rst
V6-epiclock-py/docs/epiclock-v5/: usage.rst
V6-epiclock-py/epiclock_v5/: __init__.py  central.py  extract.py  federated.py  preprocess.py
V6-epiclock-py/test/: test_compute.py  test_data_1.csv  test_data_2.csv  test_data_3.csv
v6-anova-py/: .copier-answers.yml  Dockerfile  README.md  algorithm_store.json  requirements.txt  setup.py
v6-anova-py/docs/: README.md  conf.py  index.rst
v6-anova-py/test/: test.py
v6-anova-py/v6-anova-py/: central.py  partial.py
v6-betavalues-py/: .copier-answers.yml  Dockerfile  Makefile  README.md  algorithm_store.json  pyproject.toml
v6-betavalues-py/docs/: README.md  conf.py  index.rst
v6-betavalues-py/globalIDAT/: __init__.py  central.py  extract.py  federated.py  preprocess.py
v6-betavalues-py/test/: test_compute.py  test_extraction.py  test_preprocessing.py
v6-extractionIDAT-py/: .copier-answers.yml  Dockerfile  Makefile  README.md  algorithm_store.json  pyproject.toml
v6-extractionIDAT-py/docs/: README.md  conf.py  index.rst
v6-extractionIDAT-py/docs/extractionIDAT/: usage.rst
v6-extractionIDAT-py/extractionIDAT/: extract.py  federated.py
v6-extractionIDAT-py/test/: test_compute.py  test_extraction.py  test_preprocessing.py
v6-extractionIDAT-py/test/Hospital A/: sample_sheet.csv
v6-extractionIDAT-py/test/Hospital B/: sample_sheet.csv
v6-fisher-exact-test-py/: .copier-answers.yml  Dockerfile  README.md  algorithm_store.json  pyproject.toml  requirements.txt  setup.py
v6-fisher-exact-test-py/docs/: README.md  conf.py  index.rst
v6-fisher-exact-test-py/docs/v6-fisher-exact-test-py/: implementation.rst  usage.rst
v6-fisher-exact-test-py/test/: test.py  test_compute.py  test_data_1.csv  test_data_2.csv  test_data_3.csv  test_data_4.csv
v6-fisher-exact-test-py/v6-fisher-exact-test-py/: __init__.py  central.py  federated.py  globals.py  partial.py
v6-pca-py/: .copier-answers.yml  Dockerfile  README.md  algorithm_store.json  setup.py
v6-pca-py/docs/: README.md  conf.py  index.rst
v6-pca-py/test/: test.py
v6-pca-py/v6-pca-py/: central.py  partial.py
v6-preprocessIDAT-py/: .copier-answers.yml  Dockerfile  Makefile  README.md  algorithm_store.json  pyproject.toml
v6-preprocessIDAT-py/docs/: README.md  conf.py  index.rst
v6-preprocessIDAT-py/docs/preprocessIDAT/: usage.rst
v6-preprocessIDAT-py/preprocessIDAT/: central.py  extract.py  preprocess.py
v6-preprocessIDAT-py/test/: test_compute.py  test_extraction.py  test_preprocessing.py
v6-preprocessIDAT-py/test/hospital_A/: samplesheet.csv
v6-preprocessIDAT-py/test/hospital_B/: samplesheet.csv
v6-summary-py/: algorithm_store.json
v6-t-test-py/: .copier-answers.yml  Dockerfile  algorithm_store.json
v6-t-test-py/docs/: README.md  conf.py  (+1 more)
v6-tukey-py/: .copier-answers.yml  Dockerfile  README.md  algorithm_store.json  setup.py
(+36 files in other folders)
