[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "v6-fisher-exact-test-py"
version = "1.0.0"
description = "Fisher's exact test to evaluate the significance of associations between two categorical variables in a 2×2 contingency table"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "vantage6-algorithm-tools>=5.0.0a43",
  "pandas",
  "scipy"
]
authors = [
    # TODO add authors
]
license = { text = "MIT" }
keywords = ["vantage6", "algorithm", "federated-learning"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
# TODO add urls

[tool.hatch.build.targets.wheel]
packages = ["v6-fisher-exact-test-py"]

[tool.uv]
prerelease = "allow"