[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "preprocessIDAT"
version = "1.0.0"
description = "Preprocessing of IDAT files to obtain beta-values"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "vantage6-algorithm-tools>=5.0.0a43",
  "pandas",
]
authors = [
    # TODO add authors
]
license = { text = "MIT" }
keywords = ["vantage6", "algorithm", "federated-learning"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
# TODO add urls

[tool.hatch.build.targets.wheel]
packages = ["preprocessIDAT"]